<resources>
    <string name="app_name">Reiseplaner</string>

    <!-- Action Bar Strings -->
    <string name="action_reiseziele">Reiseziele</string>
    <string name="action_abg_reiseziele">Abgeschlossene Reiseziele</string>
    <string name="action_add">Add</string>

    <!-- Texte für Screens -->
    <string name="land">Land</string>
    <string name="stadt">Stadt</string>
    <string name="objekt">Sehenswürdigkeit</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="anreise">Anreise</string>
    <string name="abreise">Abreise</string>
    <string name="bewertung">Bewertung</string>

    <string name="okButton">OK</string>
    <string name="abbrechenButton">Abbrechen</string>
    <string name="abgeschlossenButton">Reise abgeschlossen!</string>
    <string name="loeschenButton">Löschen!</string>

    <string name="close">X</string>
    <string name="bewertunglang">Wie hat Ihnen die abgeschlossene Reise gefallen?</string>

    <!-- Manifest Title -->
    <string name="offeneReise">Reiseziele</string>
    <string name="abgeschlosseneReisen">abgeschlossene Reisen</string>
    <string name="anlegenReise">Reise anlegen</string>
    <string name="detailReise">Reisedetails</string>

</resources>
