<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateScreen">

    <LinearLayout
        android:id="@+id/landLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <EditText
            android:id="@+id/landEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/land"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/stadtEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stadt"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/objektEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/objekt"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/beschreibungEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beschreibung"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingLeft="10dp"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/zeitraumLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/landLinearLayout"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/anreiseEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/anreise"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textAlignment="center"
            android:inputType="text"/>

        <EditText
            android:id="@+id/abreiseEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/anreise"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textAlignment="center"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/zeitraumLayout"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:text="@string/okButton"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:layout_marginRight="15dp"
            android:text="@string/abbrechenButton"/>

    </LinearLayout>

</RelativeLayout>