<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/detaillandLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/detaillandEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:text="@string/land" />

            <EditText
                android:id="@+id/detailstadtEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:text="@string/stadt" />

            <EditText
                android:id="@+id/detailobjektEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:text="@string/objekt" />

            <EditText
                android:id="@+id/detailbeschreibungEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:text="@string/beschreibung" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zeitraumLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detaillandLinearLayout"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/detailanreiseEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="0.50"
                android:inputType="number"
                android:text="@string/anreise"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/detailabreiseEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="0.50"
                android:inputType="number"
                android:text="@string/anreise"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bewertungReiseLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/zeitraumLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bewertung"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp"
                android:gravity="bottom|left"
                android:text="@string/bewertung"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edittextbewertung"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bewertungReiseLayout"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/detailOkButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0.50"
                android:text="@string/okButton" />

            <Button
                android:id="@+id/detailAbbrechenButton"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:layout_weight="0.50"
                android:text="@string/abbrechenButton" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/abgeschlossenLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailButtonsLayout"
            android:orientation="vertical">

            <Button
                android:id="@+id/abgeschlossenButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:text="@string/abgeschlossenButton" />

            <Button
                android:id="@+id/loeschenButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="15dp"
                android:text="@string/loeschenButton" />


        </LinearLayout>
        
    </RelativeLayout>

</ScrollView>